add line-clamp, responsiveness

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@tailwindcss/line-clamp": "^0.4.2",
     "next": "latest",
     "qs": "^6.11.0",
     "react": "^17.0.2",
