--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.4.2",
+    "moment": "^2.29.4",
     "next": "latest",
     "qs": "^6.11.0",
     "react": "^17.0.2",
