add export script and _static build dir

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "start": "next start",
     "type-check": "tsc",
     "lint": "next lint",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "export": "yarn run build && next export -o _static"
   },
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.4.2",
