parent 095d7759bbd10e7bb54c6369014c33d38b49af83 author Dassaev Tagle <dassaev.tagle@gmail.com> 1665352202 -0500 committer Dassaev Tagle <dassaev.tagle@gmail.com> 1665544930 -0500
add image upload to do space

.

.

.

.

add typescript

remove types node

add yarn lock

.

.

add aws-s3 provider

possible fix strapi s3 provider

.

.

.

.

possible fix upload plugin

format

.

.

.

.

.

.

.

.

add typescript

remove types node

add yarn lock

.

.

add aws-s3 provider

possible fix strapi s3 provider

.

add @strapi/provider-upload-aws-s3

.

.

.

possible fix upload plugin

format

.

.

.

.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "type-check": "tsc",
     "lint": "next lint",
     "format": "prettier --write .",
-    "export": "yarn run build && next export -o _static"
+    "export": "yarn install --production=false && rimraf dist && yarn build && yarn install --production && next export -o _static"
   },
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.4.2",
