--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,7 @@
     "react-swipeable": "^7.0.0"
   },
   "devDependencies": {
-    "@types/node": "^12.12.21",
+    "@types/node": "18.8.4",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -33,6 +33,6 @@
     "postcss-preset-env": "^7.8.0",
     "prettier": "^2.7.1",
     "tailwindcss": "^3.1.8",
-    "typescript": "*"
+    "typescript": "4.8.4"
   }
 }
