--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.4.2",
+    "html-react-parser": "^3.0.4",
     "moment": "^2.29.4",
     "next": "latest",
     "qs": "^6.11.0",
