--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.4.0",
+    "react-masonry-css": "^1.0.16",
     "react-swipeable": "^7.0.0"
   },
   "devDependencies": {
